Adição de h1 na página inicial

--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -26,6 +26,9 @@
 {{/* Link para Flaticon Uicons - TODOS os estilos (Mantido) */}}
 <link href='https://cdn.jsdelivr.net/npm/@flaticon/flaticon-uicons@3.3.1/css/all/all.min.css' rel='stylesheet'>
 
+{{/* Carrega o CSS Customizado (Adicionado Aqui) */}}
+<link rel="stylesheet" href="{{ "/css/custom.css" | relURL }}">
+
 
 {{/* O BLOCO INTEIRO "{{ if .IsHome }} ... {{ end }}" 
     QUE ADICIONAVA AS TAGS OG:IMAGE E TWITTER:IMAGE 
