--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,1 +1,1 @@
-{{ if ne .Site.Params.hideMadeWithLine true }}Feito com amor, café e <a href="https://github.com/janraasch/hugo-bearblog/">Hugo Bear</a>. {{ end }}
+{{ if ne .Site.Params.hideMadeWithLine true }}Criado com amor, carinho e café.<br> Veja o código-fonte no <a href="https://github.com/coaxito/coaxito/">Github</a>.{{ end }}
